--- a/style.css
+++ b/style.css
@@ -1360,9 +1360,6 @@ body.lock {
     font-size: 16px;
     line-height: 22px;
   }
-  header {
-    padding-top: 30px;
-  }
   header .container {
     padding: 0 16px;
   }
@@ -1378,7 +1375,7 @@ body.lock {
     display: none;
   }
   header .container .logo .navbar-brand {
-    margin: 0;
+    margin: 0 51px;
     padding: 0;
     font-size: 24px;
     line-height: 30px;
