--- a/style.css
+++ b/style.css
@@ -1303,6 +1303,9 @@ body.lock {
   }
 }
 @media screen and (max-width: 991px) {
+  body {
+    overflow-x: hidden;
+  }
   .btn.btn-primary {
     font-family: "Proza Libre";
     font-weight: 600;
